<resources>
    <string name="app_name">Group10App</string>
    <string name="welcomeLogin">Login</string>
    <string name="welcomeRegister">Need an account? Register</string>
    <string name="welcomeAnonymous">Anonymous Browsing</string>
    <string name="welcomeBackgroundImage">Background Image</string>
    <string name="welcomeLogoBackground">Logo Background</string>
    <string name="loginButton">Login</string>
    <string name="sitemap">Sitemap</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="register">Need an account? Register</string>
    <string name="loginAnonymous">Want to be anonymous? Click here</string>
    <string name="loginTitle">Login</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="loginConfirmButton">Login</string>
    <string name="registrationTitle">Registration</string>
    <string name="email">Email <font color='#FF0000'>*</font></string>
    <string name="name">Name </string>
    <string name="password">Password <font color='#FF0000'>*</font></string>
    <string name="dob">Birth date <font color='#d3d3d3'>(optional)</font></string>
    <string-array name="sex">
        <item>""</item>
        <item>M</item>
        <item>F</item>
        <item>O</item>
    </string-array>
    <string name="height">Height <font color='#d3d3d3'>(optional)</font></string>
    <string name="weight">Weight <font color='#d3d3d3'>(optional)</font></string>
    <string name="radioButtonMale">Male</string>
    <string name="radioButtonFemale">Female</string>
    <string name="radioButtonOther">Other</string>
    <string name="healthConditions">Any health conditions? <font color='#d3d3d3'>(optional)</font></string>
    <string name="emailHint">eg. example@gmail.com</string>
    <string name="nameHint">eg. John Doe</string>
    <string name="passwordHint">eg. d*7A1R#3</string>
    <string name="dobHint">eg. 1998–01–18</string>
    <string name="heightHintCm">eg. 178 cm</string>
    <string name="weightHintKg">eg. 76 kg</string>
    <string name="healthConditionsHint">eg. Diabetes, Asthma, etc.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="string_finish">\@string/finish</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="workoutsTitle">Workouts</string>
    <string name="workoutsTmgLabel">Target Muscle Group</string>
    <string name="workoutsDurationLabel">Duration</string>
    <string name="workoutsDifficultyLabel">Difficulty</string>
    <string name="workoutsEquipmentLabel">Equipment</string>
    <string name="workoutsSearchButton">Search</string>
    <string name="workoutsGenerateButton">Generate</string>
    <string name="dataControlButtonTitle">Data Control</string>
    <string name="accessibilityButtonTitle">Accessibility</string>
    <string name="accountButtonTitle">Account</string>
    <string name="DOBTitle">DOB:</string>
    <string name="sexTitle">Sex:</string>
    <string name="weightTitle">Weight:</string>
    <string name="heightTitle">Height:</string>
    <string name="allergiesTitle">Allergies:</string>
    <string name="reasonsTitle">Reasons:</string>
    <string name="heightHint">eg. 178</string>
    <string name="updateValue">Update All</string>
    <string name="clearValue">Clear</string>
    <string name="homeItem">Home</string>
    <string name="workoutsItem">Workouts</string>
    <string name="historyItem">History</string>
    <string-array name="weightUnits">
        <item>""</item>
        <item>kg</item>
        <item>lbs</item>
    </string-array>
    <string-array name="heightUnits">
        <item>""</item>
        <item>cm</item>
        <item>inch</item>
    </string-array>
    <string-array name="reasons">
        <item>""</item>
        <item>I want to lose weight</item>
        <item>I want to gain weight</item>
        <item>I want to maintain my weight</item>
    </string-array>
    <string name="updateAllValues">Update all values</string>
    <string name="changePasswordTitle">Change Password</string>
    <string name="changePasswordButton">Change Password</string>
    <string name="deleteAccountText">Delete Account</string>
    <string name="deleteAccountButton">Delete Account</string>
    <string name="logout">Log Out</string>
    <string name="changePasswordSignedInTitle">Please enter your current and new password below.</string>
    <string name="passwordCurrentInput">Current Password:</string>
    <string name="currentPassword">Password</string>
    <string name="changePasswordNew">Please enter your new password:</string>
    <string name="newPasswordInput">New Password</string>
    <string name="newPasswordInputAgain"> Please enter your new password again:</string>
    <string name="confirmNewPassword">Confirm Password</string>
    <string name="changeConform">Confirm</string>
    <string name="logoutText">Are you sure you want to do this?</string>
    <string name="deleteAccountTitle">Are you sure you want to do this? \nYour workout history and account will be deleted.</string>
    <string name="deleteHistoryTitle">Are you sure you want to do this? \nYour workout history will be deleted.</string>
    <string name="deleteAccountSubtitle">Please enter your password to confirm:</string>
    <string name="deleteAccountInput">Password</string>
    <string name="deleteAccountConfirm">Confirm</string>
    <string name="searchTitleOption">Search</string>
    <string name="searchButtonDescription">For new users who want to grab and go with a workout.</string>
    <string name="createTitle">Create</string>
    <string name="createButtonDescription">For experienced users who want to tailor their workout.</string>
    <string name="searchDifficulty">Difficulty:</string>
    <string name="searchDuration">Duration:</string>
    <string name="searchTarget">Target Muscle Group:</string>
    <string name="searchFilter">Filter</string>
    <string name="exercisePopupTitle">Exercises:</string>
    <string name="selectWorkout">Select</string>
    <string name="closePopup">Close</string>
    <string name="exerciseName">Name</string>
    <string name="exerciseDescription">Description</string>
    <string name="exerciseIllustration">Illustration</string>
    <string name="exerciseTargetMuscle">Target Muscle Group</string>
    <string name="exerciseEquipment">Equipment</string>
    <string name="exerciseDifficulty">Difficulty</string>
    <string name="workoutName">Name</string>
    <string name="workoutDuration">Duration</string>
    <string name="workoutTarget">Target Muscle Group:</string>
    <string name="workoutEquipment">Equipment:</string>
    <string name="workoutDifficulty">Difficulty:</string>
    <string name="workout_name">Workout Name:</string>
    <string name="workout_duration">Duration (minutes):</string>
    <string name="easy_diff">Easy</string>
    <string name="medium_diff">Medium</string>
    <string name="hard_diff">Hard</string>
    <string name="resetTitle">Reset your password</string>
    <string name="resetDescription">Enter the email address associated
with your account and we will send you an email with further instructions.</string>
    <string name="hintEmail">Email</string>
    <string name="sendEmail">Send Email</string>
    <string name="backToLogin">Login</string>
    <string name="codeResent">Code has been resent</string>
    <string name="resetContinueTitle">Enter your new password:</string>
    <string name="resetContinueInput1">New Password</string>
    <string name="resetContinueInput2">Confirm Password</string>
    <string name="resetContinueConfirm">Change Password</string>
    <string name="resetConfirmTitle">Enter the Code</string>
    <string name="resetConfirmDescription">Please enter the code that was sent you. If you have not received the code, click "Try Again"</string>
    <string name="resetConfirmCodeHint">Code</string>
    <string name="resetConfirmTryAgain">Try Again</string>
    <string name="resetConfirmConfirm">Confirm</string>
    <string name="aiTitle">AI Generation</string>
    <string name="aiDescription">Generate a workout using AI that tailors to your personal preference.</string>
    <string name="aiBegin">Begin</string>
    <string name="aiToggle">AI ✨</string>
    <string name="manualToggle">Manual</string>
    <string-array name="difficulty">
        <item>Any</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="duration">
        <item>Any</item>
        <item>Less than 10 minutes</item>
        <item>10 – 30</item>
        <item>30 – 50</item>
        <item>50 – 70</item>
        <item>70 – 90</item>
        <item>More than 90 minutes</item>
    </string-array>
    <string-array name="targetMuscleGroup">
        <item>Any</item>
        <item>Abs</item>
        <item>Core</item>
        <item>Full-body</item>
        <item>Arms</item>
    </string-array>
    <string name="confirmFilter">Confirm</string>
    <string name="filterTitle">Filter</string>
    <string name="searchTitle">Search Workout</string>
    <string name="noWorkouts">No workouts were found</string>
    <string name="homePageTitle">Home Page</string>
    <string name="homePageWelcome">Welcome!</string>
    <string name="homePageGoToWorkouts">Go To Workouts</string>
    <string name="title_activity_container">container</string>
    <string name="workout_equipment">Equipment:</string>
    <string name="create_workout">Create Workout</string>
    <string name="short_instruction">Enter the basic details below</string>
    <string name="cancel_button">Cancel</string>
    <string name="continue_button">Continue</string>
    <string-array name="motivational_quotes">
        <item>The only way to achieve the impossible is to believe it is possible.</item>
        <item>Dont watch the clock; do what it does. Keep going.</item>
        <item>The future depends on what you do today.</item>
        <item>Believe you can and youre halfway there.</item>
        <item>Dont wait for opportunity. Create it.</item>
        <item>Success is not the key to happiness. Happiness is the key to success.</item>
        <item>The secret of getting ahead is getting started.</item>
        <item>The harder you work for something, the greater youll feel when you achieve it.</item>
        <item>Dream bigger. Do bigger.</item>
        <item>Dont stop when youre tired. Stop when youre done.</item>
        <item>Wake up with determination. Go to bed with satisfaction.</item>
        <item>Do something today that your future self will thank you for.</item>
        <item>Little things make big days.</item>
        <item>Its going to be hard, but hard does not mean impossible.</item>
        <item>Dream it. Believe it. Build it.</item>
        <item>Dont wait. The time will never be just right.</item>
        <item>Success usually comes to those who are too busy to be looking for it.</item>
        <item>The only place where success comes before work is in the dictionary.</item>
        <item>The only limit to our realization of tomorrow will be our doubts of today.</item>
        <item>The way to get started is to quit talking and begin doing.</item>
        <item>If you can dream it, you can do it.</item>
        <item>The purpose of our lives is to be happy.</item>
        <item>Life is what happens when youre busy making other plans.</item>
        <item>Get busy living or get busy dying.</item>
        <item>Many of lifes failures are people who did not realize how close they were to success when they gave up.</item>
    </string-array>
</resources>