<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changePasswordSignedInTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/passwordCurrentInput"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_small" />

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_field_height_default"
        android:autofillHints="password"
        android:hint="@string/currentPassword"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/changePasswordNew"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_small" />

    <EditText
        android:id="@+id/newPassword1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_field_height_default"
        android:autofillHints="password"
        android:hint="@string/newPasswordInput"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/newPasswordInputAgain"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_small" />

    <EditText
        android:id="@+id/newPassword2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_field_height_default"
        android:autofillHints="password"
        android:hint="@string/confirmNewPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/changePasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_default"
        android:layout_marginTop="10dp"
        android:background="@drawable/solid_background_tetradic1"
        android:text="@string/changeConform"
        android:textColor="@color/white" />

</LinearLayout>
