<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pages.ForgotPassword">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-250dp"
            android:contentDescription="@string/welcomeBackgroundImage"
            android:foregroundGravity="top"
            android:paddingLeft="-50dp"
            android:paddingTop="-110dp"
            android:paddingRight="-50dp"
            android:src="@drawable/welcome_circle" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/welcomeLogoBackground"
            android:src="@drawable/logo_background" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/welcomeBackgroundImage"
            android:foregroundGravity="top"
            android:paddingLeft="-50dp"
            android:paddingTop="-110dp"
            android:paddingRight="-50dp"
            android:src="@drawable/icon_app_logo" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/resetConfirmTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_very_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/checkDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="@string/resetConfirmDescription" />

        <EditText
            android:id="@+id/codeEnter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:autofillHints="creditCardSecurityCode"
            android:ems="10"
            android:hint="@string/resetConfirmCodeHint"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/tryAgain"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/resetConfirmTryAgain"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/codeConfirm"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/solid_background_tetradic1"
                android:text="@string/resetConfirmConfirm"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/backToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/loginButton" />
    </LinearLayout>
</LinearLayout>