<!-- res/layout/dialog_password.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AlertDialog.AppCompat"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteAccountTitle"
        android:layout_marginBottom="@dimen/margin_default"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteAccountSubtitle"
        android:textSize="@dimen/font_size_small" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accountDeletePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/ButtonPastelRed"
        android:id="@+id/deleteConfirm"
        android:layout_width="match_parent"
        android:text="@string/deleteAccountConfirm" />

</LinearLayout>
